# MCA2INZAM

./: CMakeLists.txt  README.md  case1.h  case3.h  inc.h  linkedList.h  main.cpp  mca2nd.cbp  mca2nd.depend  mca2nd.layout  pizza.cpp  q1.h  q2.h  q3.h  q4a5.h  qfiles.h  questions.h
